# AIAgentWorkshop-New

./: .env  .env.example  README.md  architecture.md  pyproject.toml
session1/: basics.py  crewai_intro.py
session2/: agent_roles.py  agent_roles_gui.py  content_crew.py
session3/: langgraph_basics.py  stateful_workflow.py
utils/: config.py  helpers.py
