[project]
name = "ai-agent-workshop"
version = "0.1.0"
description = "AI Agent Workshop for Beginners"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai==1.6.1",
    "langchain>=0.3.27",
    "langchain-openai",
    "langgraph",
    "litellm==1.60.2",
    "openai",
    "python-dotenv",
    "streamlit",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
